# TFM_IA_SATELLITE_OCEAN_TOOLS

./: .gitignore  LICENSE  README.MD  SOT-0_Variable_Viewer.py  SOT-11_STDB_Clustering_Evaluation.ipynb  SOT-12_STDB_Clustering_OT.ipynb  SOT-6_PCA_Weak_Permanent_Upwelling.ipynb  SOT-7_PCA_Permanent_Upwelling.ipynb  SOT-8_PCA_Mauritania_Senegalese_Upwelling.ipynb  ocean_tools_src.py  pyproject.toml
data/dataset_file_lists/: aqua-modis-chlor-daily-4km-20000224-20241218-binned.txt  aqua-modis-chlor-monthly-4km-20000224-20241218-binned.txt  aqua-modis-sst-daily-4km-20020704-20241218-binned.txt  aqua-modis-sst-monthly-4km-20020704-20241218-binned.txt  aqua-modis-sst-nightly-4km-20020704-20241218-binned.txt  terra-modis-sst-daily-4km-20000224-20241218-binned.txt  terra-modis-sst-monthly-4km-20000224-20241218-binned.txt  terra-modis-sst-nightly-4km-20000224-20241218-binned.txt
ocean_tools/config/: defaults.py
ocean_tools/data_handling/: availability.py  download.py
ocean_tools/io/: readers.py  writers.py
ocean_tools/processing/: anomalies.py  clustering.py  data_prep.py  differences.py  merges.py  pca.py  regression.py
ocean_tools/visualization/: difference_plots.py  feature_plots.py  maps.py  reports.py
ocean_tools_docs/: ot_architecture.mkd
