[tool.poetry]
name = "tfm-2025-sst"
version = "0.1.0"
description = "Artificial Intelligence Masters Final Project"
authors = ["Sebastián Daniel Tamayo Guzmán"]
readme = "README.md"
packages = [{include = "tfm_2025_sst"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
netcdf4 = "^1.7.2"
xarray = "^2024.11.0"
cmocean = "^4.0.3"
cartopy = "^0.24.1"
scikit-learn = "^1.5.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
